--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@ pandas
 mlflow==2.2.2
 notebook
 numpy
-scikit-learn
+scikit-learn==1.2.2
 matplotlib
 python-box==6.0.2
 pyYAML
 tqdm
 ensure==1.0.2
+imbalanced-learn==0.10.1
 joblib
 types-PyYAML
 Flask
