--- a/config/config.yaml
+++ b/config/config.yaml
@@ -30,5 +30,5 @@ model_trainer:
 model_evaluation:
   root_dir: artifacts/model_evaluation
   test_data_path: artifacts/data_transformation/test.csv
-  model_path: artifacts/model_trainer/model.joblib
+  model_dir: artifacts/model_trainer
   metric_file_name: artifacts/model_evaluation/metrics.json
