--- a/.gitignore
+++ b/.gitignore
@@ -177,7 +177,8 @@ cython_debug/
 
 artifacts/*
 catboost_info/*
-
+mlruns/
+*.pkl
 # Abstra
 # Abstra is an AI-powered process automation framework.
 # Ignore directories containing user credentials, local state, and settings.
