--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/hannamhiri/weatherAUS/raw/main/weatherAUS.zip
+  source_URL: https://github.com/hannamhiri/ecommerce_customer_churn_dataset/raw/main/archive%20(1).zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
@@ -11,13 +11,13 @@ data_ingestion:
 
 data_validation:
   root_dir: artifacts/data_validation
-  unzip_data_dir: artifacts/data_ingestion/weatherAUS.csv
+  unzip_data_dir: artifacts/data_ingestion/ecommerce_customer_churn_dataset.csv
   STATUS_FILE: artifacts/data_validation/status.txt
 
 
 data_transformation:
   root_dir: artifacts/data_transformation
-  data_path: artifacts/data_ingestion/weatherAUS.csv
+  data_path: artifacts/data_ingestion/ecommerce_customer_churn_dataset.csv
 
 
 model_trainer:
