--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: hannamhiri/customer-churn-app:latest
+        image: hana367/customer-churn-app:4
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
